Opacity and readability fixes after bg change
* Changed spinner gif to one with transparent background
* Change niceTable CSS class background to white to improve readability
* Made the tables in minigame niceTable
* Returning to previous answer now selects its text

--- a/graphics/MiniGameStyles.css
+++ b/graphics/MiniGameStyles.css
@@ -84,3 +84,16 @@ body {
     -moz-border-radius: 20px;
     border-radius: 20px;
 }
+
+.niceTable {
+    text-align: center;
+    padding: 10px;
+    -webkit-border-radius: 10px;
+    -moz-border-radius: 10px;
+    border-radius: 10px;
+    border: 0;
+    box-shadow: inset 0px 0px 5px 0.1px Black, 0px 0px 5px 0.1px Black;
+    background-color: white;
+    text-align: center;
+    white-space: nowrap;
+}
